--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,10 @@ body {
   background-color: #000;
   color: #fff;
   padding-top: 20px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 400;
 }
+
 
 /* Navbar */
 .navbar-dark.bg-dark {
@@ -39,6 +42,44 @@ body {
   background-color: #ccc;
   color: #000;
 }
+
+/* Hero Section */
+section.text-white h1 {
+  font-weight: 700;
+}
+
+/* Service */
+.bg-white {
+  background-color: #fff;
+  color: #000;
+  padding: 5rem 0;
+}
+
+.bg-white p {
+  font-size: 40px;
+  line-height: 1.6;
+  font-weight: 400;
+  /* Regular */
+  font-family: 'Playfair Display', serif;
+}
+
+.bg-white strong {
+  font-size: 24px;
+  font-weight: 900;
+  /* Poppins Black */
+  font-family: 'Poppins', sans-serif;
+}
+
+.bg-white a {
+  color: #000;
+  text-decoration: none;
+}
+
+.bg-white img {
+  vertical-align: middle;
+}
+
+
 
 /* Footer */
 footer.bg-dark {
