--- a/css/styles.css
+++ b/css/styles.css
@@ -345,4 +345,19 @@ footer a:hover {
   .smaller-image {
     margin-top: 20px;
   }
+  
+  /* Estilos personalizados para el botón */
+.btn-custom {
+    background-color: #000; /* Color de fondo negro */
+    color: #fff; /* Color del texto blanco */
+    border: none; /* Sin borde */
+    padding: 10px 20px; /* Espaciado interno */
+    font-size: 16px; /* Tamaño de fuente */
+    border-radius: 5px; /* Bordes redondeados */
+    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+  }
+
+.btn-custom:hover {
+    background-color: #333; /* Color de fondo al pasar el cursor */
+  }
 }
