--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ h3 {
   font-size: 45px;
 }
 
+
+/* index.html */
 /* Hero Section */
 section.text-white h1 {
   font-weight: 700;
@@ -210,6 +212,136 @@ footer a:hover {
 
 .hover-underline-animation:hover::after {
   width: 100%;
+}
+
+/* Triangle Section */
+.triangle-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  flex-direction: column;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 200px solid transparent;
+  border-right: 200px solid transparent;
+  border-bottom: 346.4px solid white; /* Borde blanco */
+  position: relative;
+  opacity: 1;
+  margin-top: 50px; /* Ajusta el margen superior para que el triángulo esté más abajo */
+}
+
+.triangle::before {
+  content: '';
+  position: absolute;
+  top: 2px; /* Ajusta para que el borde interno negro no cubra el borde blanco */
+  left: -198px; /* Ajusta para que el borde interno negro no cubra el borde blanco */
+  width: 0;
+  height: 0;
+  border-left: 198px solid transparent;
+  border-right: 198px solid transparent;
+  border-bottom: 342.4px solid black; /* Relleno negro */
+}
+
+.triangle-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.triangle-text .side {
+  position: absolute;
+  color: gray; /* Color gris por defecto */
+  font-size: 20px;
+  font-weight: 700;
+  opacity: 1;
+  transition: color 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+.triangle-text .side.active {
+  color: white; /* Color blanco cuando está activo */
+}
+
+.side-devops {
+  top: 160px;
+  left: -182px; /* Ajustar la posición hacia la izquierda */
+  transform: translateY(-50%); /* Ajustar para centrar verticalmente */
+}
+
+.side-security {
+  top: 160px; /* Centrar verticalmente */
+  right: -265px; /* Ajustar la posición hacia la derecha */
+  transform: translateY(-50%); /* Ajustar para centrar verticalmente */
+}
+
+.side-code {
+  top: 350px; /* Colocar debajo del triángulo */
+  left: 50%; /* Centrar horizontalmente */
+  transform: translateX(-50%); /* Ajustar para centrar horizontalmente */
+}
+
+.paragraph {
+  width: 50%; /* Para limitar el ancho a la mitad de la pantalla */
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 20px; /* Añadir margen inferior para empujar el triángulo */
+  margin-top: 20px; /* Ajustar margen superior para que el párrafo esté más arriba */
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out; /* Animación suave para el párrafo */
+}
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+  .triangle {
+    border-left: 150px solid transparent; /* Ajustar el tamaño */
+    border-right: 150px solid transparent; /* Ajustar el tamaño */
+    border-bottom: 259.8px solid white; /* Ajustar el tamaño */
+    margin-top: 20px; /* Ajustar margen superior para separar el triángulo del párrafo en móviles */
+  }
+
+  .triangle::before {
+    border-left: 148px solid transparent; /* Ajustar el tamaño */
+    border-right: 148px solid transparent; /* Ajustar el tamaño */
+    border-bottom: 253.8px solid black; /* Ajustar el tamaño */
+    left: -148px; /* Ajustar la posición */
+  }
+
+  .triangle-text .side {
+    font-size: 16px; /* Ajustar el tamaño del texto */
+  }
+
+  .side-devops {
+    top: 120px; /* Ajustar la posición hacia arriba */
+    left: -140px; /* Ajustar la posición hacia la izquierda */
+  }
+
+  .side-security {
+    top: 120px; /* Ajustar la posición hacia arriba */
+    right: -205px; /* Ajustar la posición hacia la derecha */
+  }
+
+  .side-code {
+    top: 260px; /* Ajustar la posición hacia arriba */
+  }
+
+  .paragraph {
+    width: 90%; /* Para que el párrafo ocupe la mayor parte de la pantalla en móviles */
+    left: 5%; /* Centrar el párrafo en móviles */
+    font-size: 16px; /* Ajustar el tamaño del texto */
+    margin-top: 20px; /* Ajustar margen superior en móviles */
+  }
 }
 
 
