--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,15 @@ body {
   color: #fff;
   padding-top: 20px;
   font-family: 'Poppins', sans-serif;
-  font-size: 400;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 /* Navbar */
@@ -43,6 +51,55 @@ body {
   color: #000;
 }
 
+/* Call to Action Section */
+.cta-section {
+  background-color: #fff;
+  color: #000;
+}
+
+.btn-action {
+  background-color: #000;
+  color: #ffffff !important;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  height: 40px;
+  display: inline-block;
+  line-height: 20px;
+  margin-left: auto;
+  display: block;
+  max-width: 200px;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 768px) {
+  .col-md-4.text-md-right {
+    text-align: left;
+    /* Alinea el botón a la izquierda */
+  }
+
+  .btn-action {
+    margin-left: 0;
+    /* Elimina el margen izquierdo para alinear a la izquierda */
+    max-width: none;
+    /* Permite que el botón se expanda */
+    width: 100%;
+    /* Hace que el botón ocupe todo el ancho disponible */
+  }
+}
+
+.btn-action:hover {
+  background-color: #333;
+  /* Color al pasar el mouse */
+}
+
+.cta-section h3 {
+  font-size: 45px;
+}
+
+
+/* index.html */
 /* Hero Section */
 section.text-white h1 {
   font-weight: 700;
@@ -157,6 +214,136 @@ footer a:hover {
   width: 100%;
 }
 
+/* Triangle Section */
+.triangle-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  flex-direction: column;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 200px solid transparent;
+  border-right: 200px solid transparent;
+  border-bottom: 346.4px solid white; /* Borde blanco */
+  position: relative;
+  opacity: 1;
+  margin-top: 50px; /* Ajusta el margen superior para que el triángulo esté más abajo */
+}
+
+.triangle::before {
+  content: '';
+  position: absolute;
+  top: 2px; /* Ajusta para que el borde interno negro no cubra el borde blanco */
+  left: -198px; /* Ajusta para que el borde interno negro no cubra el borde blanco */
+  width: 0;
+  height: 0;
+  border-left: 198px solid transparent;
+  border-right: 198px solid transparent;
+  border-bottom: 342.4px solid black; /* Relleno negro */
+}
+
+.triangle-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.triangle-text .side {
+  position: absolute;
+  color: gray; /* Color gris por defecto */
+  font-size: 20px;
+  font-weight: 700;
+  opacity: 1;
+  transition: color 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+.triangle-text .side.active {
+  color: white; /* Color blanco cuando está activo */
+}
+
+.side-devops {
+  top: 160px;
+  left: -182px; /* Ajustar la posición hacia la izquierda */
+  transform: translateY(-50%); /* Ajustar para centrar verticalmente */
+}
+
+.side-security {
+  top: 160px; /* Centrar verticalmente */
+  right: -265px; /* Ajustar la posición hacia la derecha */
+  transform: translateY(-50%); /* Ajustar para centrar verticalmente */
+}
+
+.side-code {
+  top: 350px; /* Colocar debajo del triángulo */
+  left: 50%; /* Centrar horizontalmente */
+  transform: translateX(-50%); /* Ajustar para centrar horizontalmente */
+}
+
+.paragraph {
+  width: 50%; /* Para limitar el ancho a la mitad de la pantalla */
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 20px; /* Añadir margen inferior para empujar el triángulo */
+  margin-top: 20px; /* Ajustar margen superior para que el párrafo esté más arriba */
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out; /* Animación suave para el párrafo */
+}
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+  .triangle {
+    border-left: 150px solid transparent; /* Ajustar el tamaño */
+    border-right: 150px solid transparent; /* Ajustar el tamaño */
+    border-bottom: 259.8px solid white; /* Ajustar el tamaño */
+    margin-top: 20px; /* Ajustar margen superior para separar el triángulo del párrafo en móviles */
+  }
+
+  .triangle::before {
+    border-left: 148px solid transparent; /* Ajustar el tamaño */
+    border-right: 148px solid transparent; /* Ajustar el tamaño */
+    border-bottom: 253.8px solid black; /* Ajustar el tamaño */
+    left: -148px; /* Ajustar la posición */
+  }
+
+  .triangle-text .side {
+    font-size: 16px; /* Ajustar el tamaño del texto */
+  }
+
+  .side-devops {
+    top: 120px; /* Ajustar la posición hacia arriba */
+    left: -140px; /* Ajustar la posición hacia la izquierda */
+  }
+
+  .side-security {
+    top: 120px; /* Ajustar la posición hacia arriba */
+    right: -205px; /* Ajustar la posición hacia la derecha */
+  }
+
+  .side-code {
+    top: 260px; /* Ajustar la posición hacia arriba */
+  }
+
+  .paragraph {
+    width: 90%; /* Para que el párrafo ocupe la mayor parte de la pantalla en móviles */
+    left: 5%; /* Centrar el párrafo en móviles */
+    font-size: 16px; /* Ajustar el tamaño del texto */
+    margin-top: 20px; /* Ajustar margen superior en móviles */
+  }
+}
+
 
 /* About.html */
 /* Estilos específicos para la sección Acerca de */
@@ -164,12 +351,12 @@ footer a:hover {
 .about-section {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start; /
+  align-items: flex-start;/
 }
 
 .about-section .about-title {
   font-weight: 900;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
   font-size: 64px;
   letter-spacing: -0.5px;
   padding-bottom: 15px;
@@ -186,31 +373,33 @@ footer a:hover {
 
 /* Servicios Section */
 .services-section {
-  color: gray; 
-  padding-top: 20px; 
-  padding-bottom: 20px; 
+  color: gray;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.services-section h3, .services-section p {
+.services-section h3,
+.services-section p {
   font-family: 'Poppins', sans-serif;
 }
 
 .services-section h3 {
   font-weight: 700;
-  font-size: 35px; 
-  color: white; 
+  font-size: 35px;
+  color: white;
   margin-top: 0;
 }
 
 .services-section p {
-  font-weight: 400; /* Poppins regular */
-  color: gray; 
-  margin-top: 0; 
+  font-weight: 400;
+  /* Poppins regular */
+  color: gray;
+  margin-top: 0;
 }
 
 .col-divider {
-  position: relative; 
-  padding-right: 15px; 
+  position: relative;
+  padding-right: 15px;
 }
 
 .col-divider::after {
@@ -218,20 +407,20 @@ footer a:hover {
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 0; 
-  width: 1px; 
-  background-color: white; 
-  height: 100%; 
+  right: 0;
+  width: 1px;
+  background-color: white;
+  height: 100%;
 }
 
 .services-section .text-center p {
-  margin-bottom: 60px; 
+  margin-bottom: 60px;
   color: white;
 }
 
 /* MISION Section */
 
-.mision-section h4{
+.mision-section h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
   font-weight: 700;
@@ -239,7 +428,53 @@ footer a:hover {
 }
 
 .mision-section p {
-  font-weight: 400; 
-  color: gray; 
-  margin-top: 0; 
+  font-weight: 400;
+  color: gray;
+  margin-top: 0;
+}
+
+
+
+/* Lab.html */
+/* Projects  */
+.rounded-image {
+  border-radius: 20px;
+}
+
+
+.lab-image {
+  animation: fadeInUp 0.5s ease-out forwards;
+}
+
+/* Form.html */
+.smaller-image {
+  max-width: 70%;
+}
+
+/* Espaciado para los form-group */
+.form-group {
+  margin-bottom: 20px;
+}
+
+/* Estilo para el botón */
+.btn-black {
+  background-color: #000000e8;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  margin-top: 20px;
+}
+
+.btn-black:hover {
+  background-color: #000;
+  /* Color al pasar el mouse */
+  color: white;
+}
+
+@media (max-width: 768px) {
+  .smaller-image {
+    margin-top: 20px;
+  }
 }
